# json-benchmarks

./: .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  ReadMe.md  conanfile.txt  pyproject.toml  results.json
.github/workflows/: ci.yml
app/hello_world/: CMakeLists.txt
cpp/app/hello_world/: main.cpp
cpp/include/tools/: tools.h
cpp/src/: CMakeLists.txt  boost_json.h  glaze_json.h  main.cpp  nl_json.h  simd_json.h
cpp/src/hello/: CMakeLists.txt  hello.cpp
cpp/test/: CMakeLists.txt  boost_json_test.cpp  nl_json_test.cpp  simd_json_test.cpp
include/hello/: hello.h
node/: app.js  benchmark.js  main.js  package-lock.json  package.json  transform_json.js  transform_json.test.js
python/: CMakeLists.txt  app.py  def_hello.cpp  pyproject.toml  requirements.txt
python/hello/: __init__.py
python/json_benchmark/: __main__.py  app.py  cli.py
python/json_benchmark/impl/: __init__.py  orjson.py  python_json.py  rapidjson.py
python/test/json_benchmark/: transform_test.py
python/tests/hello/: test_hello.py
python/tools/: tools.py
rust/: generate.rs  json.rs  main.rs  transform.rs
scripts/: build_all.sh  commands.py  run_benchmarks.py
test/hello/: CMakeLists.txt  hello_test.cpp
